--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -1,7 +1,7 @@
 .contactWrapper {
   width: 100%;
   height: 100%;
-  padding: 2% 10%;
+  padding: 2% clamp(2rem, 1.7027rem + 6.4865vw, 9rem);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -10,7 +10,7 @@
 }
 .contactMethods {
   width: 50%;
-  padding: 0 5%;
+  padding: 0 clamp(0rem, -0.8649rem + 4.3243vw, 4rem);
   border-right: goldenrod solid 4px;
 
   p {
@@ -63,4 +63,15 @@ input[type="submit"]:hover {
 .formContainer {
   width: 50%;
   padding-left: 5%;
+}
+@media only screen and (max-width: 825px) {
+  .contactWrapper {
+    flex-direction: column;
+  }
+  .contactMethods,
+  .formContainer {
+    width: 100%;
+    border: none;
+    margin-top: 2%;
+  }
 }
