--- a/styles/sass/_project.scss
+++ b/styles/sass/_project.scss
@@ -67,7 +67,7 @@
     margin-left: 100px;
   }
   img {
-    width: 300px;
+    width: 400px;
     height: 300px;
   }
 }
@@ -77,18 +77,57 @@
   justify-content: flex-end;
   align-items: center;
   width: 100%;
+
   .projectPara {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     margin-right: 100px;
+    order: 1;
   }
 
   p {
     text-align: right;
   }
   img {
-    width: 300px;
+    width: 400px;
     height: 300px;
+    display: flex;
+    order: 2;
+  }
+}
+@media only screen and (max-width: 1325px) {
+  .project2,
+  .project1 {
+    flex-direction: column;
+
+    .projectPara {
+      margin-left: 0;
+
+      p {
+        width: 100%;
+      }
+    }
+  }
+  p {
+    width: 100%;
+  }
+  .project2 {
+    justify-content: left;
+    width: 100%;
+    margin-right: 0;
+
+    p {
+      text-align: left;
+    }
+    .projectPara {
+      margin-right: 0;
+      align-items: normal;
+      order: 2;
+    }
+
+    img {
+      order: 1;
+    }
   }
 }
