--- a/styles/style.css
+++ b/styles/style.css
@@ -409,8 +409,9 @@ header {
   background-color: black;
 }
 .NavBar a {
-  font-size: 38px;
+  font-size: clamp(1.5rem, 1.1757rem + 1.6216vw, 3rem);
   text-transform: uppercase;
+  font-family: Raleway, Arial, Helvetica, sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -420,6 +421,14 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+.NavBar a:link {
+  color: white;
+  text-decoration: none;
+}
+.NavBar a:visited {
+  color: white;
+  text-decoration: none;
 }
 .NavBar li {
   position: relative;
@@ -463,6 +472,10 @@ nav ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -470,12 +483,52 @@ nav ul {
 .titleContainer h1 {
   text-transform: uppercase;
   font-family: Raleway, Arial, Helvetica, sans-serif;
-  font-size: 80px;
+  font-size: clamp(2rem, 1.4595rem + 2.7027vw, 4.5rem);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-align: center;
   color: white;
-  -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: black;
-  stroke: black;
+  padding-bottom: 30px;
   border-bottom: goldenrod solid 4px;
+}
+.titleContainer h2 {
+  margin-top: 30px;
+  font-size: clamp(1.5rem, 1.0676rem + 2.1622vw, 3.5rem);
+  text-align: center;
+}
+
+.scrollup {
+  position: fixed;
+  border-radius: 50%;
+  bottom: 55px;
+  right: 10px;
+  width: 80px;
+  height: 80px;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: black;
+  cursor: pointer;
+}
+.scrollup i {
+  font-size: 60px;
+  border: 5px solid black;
+  opacity: 1;
+  position: fixed;
+  border-radius: 50%;
+  bottom: 55px;
+  right: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: goldenrod;
+  width: 65px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
 }
 
 .closed {
@@ -498,16 +551,53 @@ nav ul {
   display: flex;
 }
 
+.bottomHeader {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  bottom: 200px;
+  left: 50%;
+}
+.bottomHeader .scrolldown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: absolute;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.bottomHeader i {
+  font-size: clamp(3rem, 2.027rem + 4.8649vw, 7.5rem);
+}
+.bottomHeader i:hover {
+  color: goldenrod;
+  cursor: pointer;
+}
+
+@media only screen and (max-width: 1325px) {
+  header {
+    height: 70vh;
+  }
+
+  .bottomHeader {
+    display: none;
+  }
+}
 .about {
   width: 100%;
   height: 100%;
-  padding: 13% 2%;
+  padding: 13% 0;
   background-color: #4d4d4d;
   color: white;
 }
 
 .aboutWrapper {
-  padding: 0 5%;
+  padding: 0 clamp(2rem, 1.1351rem + 4.3243vw, 6rem);
   width: 100%;
   height: 100%;
   display: -webkit-box;
@@ -523,7 +613,7 @@ nav ul {
 
 .aboutParagraph {
   text-align: center;
-  font-size: 24px;
+  font-size: clamp(1rem, 0.8919rem + 0.5405vw, 1.5rem);
   letter-spacing: 1px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -547,10 +637,10 @@ nav ul {
   color: lightblue;
 }
 .aboutParagraph .BoxTitle {
-  min-width: 450px;
-  max-width: 450px;
-  max-height: 450px;
-  min-height: 450px;
+  min-width: clamp(19rem, 16.9459rem + 10.2703vw, 28.5rem);
+  max-width: clamp(19rem, 16.9459rem + 10.2703vw, 28.5rem);
+  max-height: clamp(19rem, 16.9459rem + 10.2703vw, 28.5rem);
+  min-height: clamp(19rem, 16.9459rem + 10.2703vw, 28.5rem);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -579,9 +669,23 @@ nav ul {
 }
 
 h2 {
-  font-size: 68px;
+  font-size: clamp(1.5rem, 1.0676rem + 2.1622vw, 3.5rem);
 }
 
+@media only screen and (max-width: 1325px) {
+  .aboutParagraph .BoxTitle {
+    display: none;
+  }
+
+  .aboutParagraph p {
+    margin: 0;
+    padding: 30px 70px;
+  }
+
+  .aboutWrapper {
+    padding: 0;
+  }
+}
 .skills {
   background-color: #c2c2c2;
 }
@@ -768,7 +872,7 @@ h2 {
   margin-left: 100px;
 }
 .project1 img {
-  width: 300px;
+  width: 400px;
   height: 300px;
 }
 
@@ -800,19 +904,74 @@ h2 {
       -ms-flex-align: end;
           align-items: flex-end;
   margin-right: 100px;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
 }
 .project2 p {
   text-align: right;
 }
 .project2 img {
-  width: 300px;
+  width: 400px;
   height: 300px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+          order: 2;
 }
 
+@media only screen and (max-width: 1325px) {
+  .project2,
+.project1 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .project2 .projectPara,
+.project1 .projectPara {
+    margin-left: 0;
+  }
+  .project2 .projectPara p,
+.project1 .projectPara p {
+    width: 100%;
+  }
+
+  p {
+    width: 100%;
+  }
+
+  .project2 {
+    -webkit-box-pack: left;
+        -ms-flex-pack: left;
+            justify-content: left;
+    width: 100%;
+    margin-right: 0;
+  }
+  .project2 p {
+    text-align: left;
+  }
+  .project2 .projectPara {
+    margin-right: 0;
+    -webkit-box-align: normal;
+        -ms-flex-align: normal;
+            align-items: normal;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .project2 img {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
+}
 .contactWrapper {
   width: 100%;
   height: 100%;
-  padding: 2% 10%;
+  padding: 2% clamp(2rem, 1.7027rem + 6.4865vw, 9rem);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -829,7 +988,7 @@ h2 {
 
 .contactMethods {
   width: 50%;
-  padding: 0 5%;
+  padding: 0 clamp(0rem, -0.8649rem + 4.3243vw, 4rem);
   border-right: goldenrod solid 4px;
 }
 .contactMethods p {
@@ -887,6 +1046,21 @@ input[type=submit]:hover {
   padding-left: 5%;
 }
 
+@media only screen and (max-width: 825px) {
+  .contactWrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .contactMethods,
+.formContainer {
+    width: 100%;
+    border: none;
+    margin-top: 2%;
+  }
+}
 footer {
   height: 40px;
   width: 100%;
