--- a/styles/sass/_skills.scss
+++ b/styles/sass/_skills.scss
@@ -5,21 +5,16 @@
 .skillsWrapper {
   padding: 5%;
 }
-.skillsDev:hover {
-  transform: scale(1.01);
-}
 
 .skillsDev {
   width: 100%;
   height: 100%;
-  background-color: white;
   color: black;
   display: flex;
   font-weight: bold;
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  border: goldenrod 10px solid;
   padding: 60px 0;
 
   h2 {
@@ -37,19 +32,24 @@
     justify-content: center;
 
     li {
-      min-width: 20%;
-      max-width: 20%;
+      min-width: 300px;
+      max-width: 300px;
+      height: 300px;
+      border-radius: 25px;
       text-align: center;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
       margin: 1%;
+      background-color: white;
+      border: solid gold 4px;
     }
 
     li:hover {
       color: goldenrod;
       cursor: pointer;
+      transform: scale(1.02);
     }
 
     p {
