--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -43,7 +43,7 @@ textarea {
   height: 200px;
 }
 input[type="submit"] {
-  background-color: #04aa6d;
+  background-color: goldenrod;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -52,7 +52,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: black;
 }
 
 .container {
