--- a/styles/style.css
+++ b/styles/style.css
@@ -300,6 +300,7 @@ header {
   height: 100vh;
   width: 100%;
   position: relative;
+  z-index: 900;
 }
 
 .header-wrapper {
@@ -1022,7 +1023,7 @@ textarea {
 }
 
 input[type=submit] {
-  background-color: #04aa6d;
+  background-color: goldenrod;
   color: white;
   padding: 12px 20px;
   border: none;
@@ -1031,7 +1032,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #45a049;
+  background-color: black;
 }
 
 .container {
